--- a/css/style.css
+++ b/css/style.css
@@ -16,39 +16,111 @@
     margin: 0 auto;
 }
 
+*{
+    font-family: 'Open Sans', sans-serif;
+}
 
-/* DEBUG */
-.debug header > nav{
-    background-color: aqua;
+/* HEADER */
+header > nav{
+    background-color: white;
     display: flex;
     justify-content: space-between;
 }
+   
 
-.debug nav + section{
-    background-color: blueviolet;
+nav > div{
+   margin: 30px;
 }
 
 
-.debug nav > div{
-    margin: 10px;
-    padding: 15px;
-    border: 2px dashed greenyellow;
+
+.nav-link{
+    text-decoration: none;
+    color: black;
+    padding: 10px;
+    align-items: center;
+}
+    
+.blue{
+    background-color: #0061FF;
+    text-align: center;
+    padding: 5px;
+    border: none;
+} 
+
+.blue > a{
+    text-decoration: none;
+    color: white;
+    font-size: 1.1em;
+}
+    
+    
+nav + section{
+    background-color:#B4D0E7;
 }
 
-.debug .row{
-    display:flex;
-    justify-content: center;
+.container-relative{
+    max-width: 1200px;
+    margin: 0 auto;
+    position: relative;
+    top: 120px;
 }
 
-.debug .small{
-    background-color: azure;
-    width: 40%;
-    border: 2px dashed lightcoral;
+.container-relative > p{
+    font-size: 5.0em;
+    font-weight: bold;
+    line-height: 80px;
+    text-align: center;
+}
+    
+    
 
+.row{
+   display:flex;
+   justify-content: center;
+   margin: 0 -20px;
+   
+}
+    
+
+.small{
+    width:calc(40% - 40px);
+    margin: 20px;
+    margin-top: 40px;
 }
 
-.debug .big{
-    background-color: blue;
-    width: 60%;
-    border: 2px dashed black;
+.small > p{
+    font-size: 1.2em;
 }
+
+.small > button{
+    margin-top: 20px;
+}
+
+button + div{
+    margin-top: 20px;
+}
+
+.small div > i{
+    margin-top: 20px;
+    font-size: 1.2em;
+}
+
+.big{
+
+    width:calc(60% - 40px);
+    margin: 20px;
+    margin-top: 40px;
+}
+    
+
+
+
+
+    
+    
+
+
+
+
+
