Aggiunto fixed a nav

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,8 @@ header > nav{
     background-color: white;
     display: flex;
     justify-content: space-between;
+    position: fixed;
+    width: 100%;
 }
    
 
@@ -114,6 +116,7 @@ button + div{
 }
     
 
+/* DEBUG */
 
 
 
