--- a/css/style.css
+++ b/css/style.css
@@ -122,8 +122,8 @@ button + div {
 /* SECTION 1 MAIN */
 .container-small > h2 {
     font-weight: bold;
-    font-size: 1.5em;
-    margin-top: 70px;
+    font-size: 2.0em;
+    margin-top: 80px;
     
 }
 
@@ -139,11 +139,11 @@ input:checked {
 
 .flex {
     display: flex;
-    align-items: stretch;
     flex-wrap: wrap;
     margin: 0 -20px;
-    
 }
+    
+    
 
 .col-1 {
     width: calc((100% / 3) - 40px);
@@ -249,6 +249,73 @@ h2 + p {
     font-size: 1.5em;
 
 }   
+
+/* SECTION 3 MAIN */
+.col-5 {
+    width: calc((100% / 3) - 40px);
+    margin: 20px;
+
+}
+
+.col-6 {
+    width: calc((100% / 3) - 40px);
+    margin: 20px;
+
+}
+
+.col-7 {
+    width: calc((100% / 3) - 40px);
+    margin: 20px;
+
+}
+
+.col-8 {
+    width: calc((100% / 3) - 40px);
+    margin: 20px;
+
+}
+
+.col-9 {
+    width: calc((100% / 3) - 40px);
+    margin: 20px;
+
+}
+
+.col-10 {
+    width: calc((100% / 3) - 40px);
+    margin: 20px;
+
+}
+
+.col-5 > img {
+    width: 100%;
+    display: block;
+}
+
+.col-6 > img {
+    width: 100%;
+    display: block;
+}
+
+.col-7 > img {
+    width: 100%;
+    display: block;
+}
+
+.col-8 > img {
+    width: 100%;
+    display: block;
+}
+
+.col-9 > img {
+    width: 100%;
+    display: block;
+}
+
+.col-10 > img {
+    width: 100%;
+    display: block;
+}
 
 
 
